--- a/shoppinglist/templates/shoppinglist/login.html
+++ b/shoppinglist/templates/shoppinglist/login.html
@@ -1,8 +1,8 @@
 {% extends 'shoppinglist/base.html' %}
 
-{% block content %}
+{% block title %} Login Page {% endblock %}
 
-<title>Login Page</title>
+{% block content %}
 
 <h1 class="text-center heading">Login</h1>
 
