--- a/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
+++ b/shoppinglist/templates/shoppinglist/shoppinglistitem_confirm_delete.html
@@ -1,8 +1,8 @@
 {% extends 'shoppinglist/base.html' %}
 
-{% block content %}
+{% block title %} Delete Shopping List Item {% endblock %}
 
-    <title>Delete Shopping List Item</title>
+{% block content %}
 
     <hr>
     {% if user.is_authenticated %}
