--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -4,6 +4,7 @@
 <html class="h-100">
 
 <head>
+    {% block title %} Shoppinglist Planner App {% endblock %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,7 @@
                     <!--         FONT AWESOME LINK     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 
                     <!--         BOOTSTRAP LINK      -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -35,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/"><span class="brand">
                 Sh<span class="red-o">o</span>ppingList<span class="thin">|Planner
-                </span></span></span></a>
+                </span></span></a>
 
             <img class="relative" src="{% static 'images/shopping_list_image.jpg' %}"  alt="Shopping List Image">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -50,8 +51,8 @@
   
                     {% if user.is_authenticated %}
                                 
-                    <p class="greeting">Welcome {{ user.username }}!</p> 
-                    <hr>
+                    <li class="greeting">Welcome {{ user.username }}!</li> 
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
