--- a/shoppinglist/templates/shoppinglist/logout.html
+++ b/shoppinglist/templates/shoppinglist/logout.html
@@ -1,8 +1,8 @@
 {% extends 'shoppinglist/base.html' %}
 
-{% block content %}
+{% block title %} Logout Page {% endblock %}
 
-<title>Logout Page</title>
+{% block content %}
 
 <h1 class="text-center heading">Logout</h1>
 
