Fix missing title error shown by html validator for the add item page

--- a/shoppinglist/templates/shoppinglist/add_shopping_item.html
+++ b/shoppinglist/templates/shoppinglist/add_shopping_item.html
@@ -1,6 +1,6 @@
 {% extends 'shoppinglist/base.html' %}
 
-{% block title %} Add Shopping List Item {% endblock %}
+<title> Add Shopping List Item </title>
 
 {% load static %}
 
