--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -99,7 +99,8 @@
         <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
         <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square ms-3"></i></a>
         <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram-square ms-3"></i></a>
-        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square ms-3"></i></p></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square ms-3"></i></a>
+    </p>
 </footer>
 
 <script>
