--- a/shoppinglist/templates/shoppinglist/base.html
+++ b/shoppinglist/templates/shoppinglist/base.html
@@ -4,7 +4,7 @@
 <html class="h-100">
 
 <head>
-    {% block title %}  {% endblock %}
+    <!-- <title>Shopping List Planner App</title>   -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
